--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-01-17 15:25+0100\n"
-"PO-Revision-Date: 2023-01-17 15:58+0100\n"
+"POT-Creation-Date: 2023-01-26 11:00+0100\n"
+"PO-Revision-Date: 2023-01-26 11:04+0100\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -2719,6 +2719,18 @@ msgstr "Teile deine Arbeit und inspiriere andere!"
 #: octoprint_mrbeam/templates/laser_job_done.jinja2:30
 msgid "By the way - Did you know?"
 msgstr "Übrigens - wusstest du schon?"
+
+#: octoprint_mrbeam/templates/laser_job_done.jinja2:58
+msgid "You can find a variety of laser materials on our website."
+msgstr "Mehr Laser-Material kannst du auf unserer Webseite im Store finden."
+
+#: octoprint_mrbeam/templates/laser_job_done.jinja2:59
+msgid "Our Material Store has the same material available for purchase."
+msgstr "Unser Material Store bietet das gleiche Material zum Kauf an."
+
+#: octoprint_mrbeam/templates/laser_job_done.jinja2:60
+msgid "We have similar materials for you in our Material Store."
+msgstr "Wir haben ähnliche Materialien für dich in unserem Material Store."
 
 #: octoprint_mrbeam/templates/laser_job_done.jinja2:63
 msgid "You need a working internet connection for this forwarding to work."
