SW-2884 Fix translation

--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2023-03-13 17:06+0100\n"
-"PO-Revision-Date: 2023-03-13 17:10+0100\n"
+"PO-Revision-Date: 2023-03-13 17:55+0100\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -3361,8 +3361,8 @@ msgid ""
 "Not loading?<br />Try a full reload by pressing <strong>Ctrl + SHIFT + R</"
 "strong>"
 msgstr ""
-"Läd nicht?<br />Versuche einen vollständigen Reload, indem Du <strong>Ctrl + "
-"UMSCHALT + R</strong> drückst"
+"Lädt nicht?<br />Versuche einen vollständigen Reload, indem Du <strong>Ctrl "
+"+ UMSCHALT + R</strong> drückst"
 
 #: octoprint_mrbeam/templates/loading_overlay.jinja2:210
 msgid "Not loading?<br />Try to reload the page."
