--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-03-16 17:11+0100\n"
-"PO-Revision-Date: 2023-03-16 17:15+0100\n"
+"POT-Creation-Date: 2023-03-24 12:42+0100\n"
+"PO-Revision-Date: 2023-03-24 13:09+0100\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -522,8 +522,8 @@ msgstr ""
 "%(open)sGoogle Chrome%(close)s für Mr Beam."
 
 #: octoprint_mrbeam/static/js/app/view-models/mrbeam.js:586
-msgid "Beta user: Please consider enabling Mr Beam analytics!"
-msgstr "Beta-Nutzer: Bitte aktiviere Mr Beam Analytics!"
+msgid "Beta user: Please consider enabling Mr Beam Better Together!"
+msgstr "Beta-Nutzer: Bitte aktiviere Mr Beam Gemeinsam Vorankommen!"
 
 #: octoprint_mrbeam/static/js/app/view-models/mrbeam.js:590
 #, python-format
@@ -531,11 +531,11 @@ msgid ""
 "As you are currently in our Beta channel, you would help us tremendously "
 "sharing%(br)sthe laser job insights, so we can improve%(br)san overall "
 "experience working with the%(br)s Mr Beam. Thank you!%(br)s%(open)sGo to "
-"analytics settings%(close)s"
+"Better Together settings%(close)s"
 msgstr ""
-"Es ist für uns bei der Weiterentwicklung Deines Mr Beam sehr hilfreich, wenn "
-"Du Analytics-Daten im Beta-Kanal automatisiert mit uns teilst. Danke! "
-"%(br)s%(open)sZu den Analytics Einstellungen%(close)s"
+"Du verwendest den Beta-Kanal unserer Software. Für die Weiterentwicklung "
+"deines Mr Beams hilft es uns enorm, wenn du mit uns Diagnosedaten teilst. "
+"Danke! Direkt %(br)s%(open)szu Gemeinsam Vorankommen%(close)s"
 
 #: octoprint_mrbeam/static/js/app/view-models/review.js:236
 msgid "Error while saving review!"
@@ -2792,7 +2792,7 @@ msgstr "Fokussiert!"
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:3
 msgid "A 'Hard Refresh' is needed after the last Software Update"
-msgstr "Nach dem letzten Software-Update ist ein „Hard Refresh” erfoderlich"
+msgstr "Nach dem letzten Software-Update ist ein „Hard Refresh” erforderlich"
 
 #: octoprint_mrbeam/templates/hard_refresh_overlay.jinja2:9
 msgid ""
@@ -5098,18 +5098,14 @@ msgstr ""
 "Fehler schneller beheben und Funktionen weiter verbessern."
 
 #: octoprint_mrbeam/templates/settings/analytics_settings.jinja2:16
-#: octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2:15
 msgid ""
 "We understand that your privacy is crucial, and we want to assure you that "
 "none of the data collected includes your personal information such as your "
-"name, login details, designs, or any other private content. You are in full "
-"control, and you can change your mind at any time by going to "
-"<strong>\"Settings > Better together\"</strong>."
+"name, login details, designs, or any other private content."
 msgstr ""
 "Wir nehmen deine Privatsphäre sehr ernst. Wir versichern, dass keine deiner "
 "persönlichen Daten, wie Namen, Login Details, Designs etc., gespeichert "
-"werden. Du hast die volle Kontrolle, falls du deine Meinung ändern solltest. "
-"Gehe hierzu einfach zu <strong>„Einstellungen > Besser werden“</strong>."
+"werden."
 
 #: octoprint_mrbeam/templates/settings/analytics_settings.jinja2:22
 #: octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2:21
@@ -5873,6 +5869,20 @@ msgstr ""
 #: octoprint_mrbeam/templates/wizard/wizard_acl.jinja2:30
 msgid "Confirm Password"
 msgstr "Passwort bestätigen"
+
+#: octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2:15
+msgid ""
+"We understand that your privacy is crucial, and we want to assure you that "
+"none of the data collected includes your personal information such as your "
+"name, login details, designs, or any other private content. You are in full "
+"control, and you can change your mind at any time by going to "
+"<strong>\"Settings > Better together\"</strong>."
+msgstr ""
+"Wir nehmen deine Privatsphäre sehr ernst. Wir versichern, dass keine deiner "
+"persönlichen Daten, wie Namen, Login Details, Designs etc., gespeichert "
+"werden. Du hast die volle Kontrolle, falls du deine Meinung ändern solltest. "
+"Gehe hierzu einfach zu <strong>„Einstellungen > Gemeinsam Vorankommen“</"
+"strong>."
 
 #: octoprint_mrbeam/templates/wizard/wizard_connection.jinja2:6
 #: octoprint_mrbeam/templates/wizard/wizard_connection.jinja2:63
