SW-3072 Fix link

--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2023-04-18 17:37+0200\n"
+"POT-Creation-Date: 2023-04-21 10:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -469,7 +469,7 @@ msgid ""
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/mrbeam.js:586
-msgid "Beta user: Please consider enabling Mr Beam Better Together!"
+msgid "Beta user: Please consider enabling Mr Beam analytics!"
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/mrbeam.js:590
@@ -478,7 +478,7 @@ msgid ""
 "As you are currently in our Beta channel, you would help us tremendously "
 "sharing%(br)sthe laser job insights, so we can improve%(br)san overall "
 "experience working with the%(br)s Mr Beam. Thank you!%(br)s%(open)sGo to "
-"Better Together settings%(close)s"
+"analytics settings%(close)s"
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/review.js:236
@@ -527,6 +527,13 @@ msgid ""
 "The laser head of your Mr Beam has to be focused according to the "
 "thickness of the felt. You can find how to do that in this "
 "%(opening_tag)sKnowledge base article%(closing_tag)s."
+msgstr ""
+
+#: octoprint_mrbeam/static/js/app/view-models/tour.js:98
+msgid ""
+"<a href='https://support.mr-"
+"beam.org/en/support/solutions/articles/43000073345?utm_source=beamos&utm_medium=software'"
+" target='_blank'><i class=\"icon-external-link\"></i>&nbsp;"
 msgstr ""
 
 #: octoprint_mrbeam/static/js/app/view-models/tour.js:116
@@ -4418,7 +4425,9 @@ msgstr ""
 msgid ""
 "We understand that your privacy is crucial, and we want to assure you "
 "that none of the data collected includes your personal information such "
-"as your name, login details, designs, or any other private content."
+"as your name, login details, designs, or any other private content. You "
+"are in full control, and you can change your mind at any time by going to"
+" <strong>\"Settings > Better together\"</strong>."
 msgstr ""
 
 #: octoprint_mrbeam/templates/settings/analytics_settings.jinja2:22
@@ -5018,12 +5027,6 @@ msgstr ""
 
 #: octoprint_mrbeam/templates/wizard/wizard_acl.jinja2:30
 msgid "Confirm Password"
-msgstr ""
-
-#: octoprint_mrbeam/templates/wizard/wizard_analytics.jinja2:15
-msgid ""
-"You are in full control, and you can change your mind at any time by "
-"going to <strong>\"Settings > Better together\"</strong>."
 msgstr ""
 
 #: octoprint_mrbeam/templates/wizard/wizard_connection.jinja2:6
