--- a/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
+++ b/octoprint_mrbeam/translations/de/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Mr_Beam 0.1.61\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2023-04-21 10:34+0200\n"
-"PO-Revision-Date: 2023-04-21 10:35+0200\n"
+"PO-Revision-Date: 2023-04-21 11:12+0200\n"
 "Last-Translator: Andy Werner <andy@mr-beam.org>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -602,9 +602,9 @@ msgid ""
 "articles/43000073345?utm_source=beamos&utm_medium=software' "
 "target='_blank'><i class=\"icon-external-link\"></i>&nbsp;"
 msgstr ""
-"<a href=‘https://support.mr-beam.org/support/solutions/articles/43000073345?"
-"utm_source=beamos&utm_medium=software' target=‘_blank’><i class=“icon-"
-"external-link”></i>&nbsp;"
+"<a href=‘https://support.mr-beam.org/de/support/solutions/"
+"articles/43000073345?utm_source=beamos&utm_medium=software' "
+"target=‘_blank’><i class=“icon-external-link”></i>&nbsp;"
 
 #: octoprint_mrbeam/static/js/app/view-models/tour.js:116
 #: octoprint_mrbeam/templates/wizard/wizard_guided_tour.jinja2:20
